# Langgy

./: .gitignore  pyproject.toml
chat-app/: basic-chatbot.ipynb
function-calling-ap/: app.py  requirements.txt
mutilagent-rag/: app.ipynb  requirements.txt
neural-network/: app.py
