[project]
name = "langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.28",
    "langgraph>=0.4.8",
    "langsmith>=0.4.1",
    "openai>=1.98.0",
    "panel>=1.7.5",
    "param>=2.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]
