[project]
name = "langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<3.0",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.2",
    "langchain-nebius>=0.1.3",
    "langchain-openai>=0.3.28",
    "langgraph>=0.4.8",
    "langsmith>=0.4.1",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "panel>=1.7.5",
    "param>=2.2.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]
